split up the large game component into small renderers

--- a/scala-server/todo.txt
+++ b/scala-server/todo.txt
@@ -2,7 +2,12 @@
 - Use smaller amazon machine.
 
   Try t2.medium first. 2 CPU and 4G no SSD. 5c/hour
+  Then c3.large - 2 CPU 3.75G SSD. 0.12
   Then m3.large 2 CPU and 7.5 G SSD. 15c/hour
+  Might as well do m3.large
+
+  t2 instances are VPC only. Why is that? VPC is another level of complication.
+  Let's not do that for now.
 
 - Indicate that it is user's turn to drag.
 
