--- a/web-ui/todo.txt
+++ b/web-ui/todo.txt
@@ -1,4 +1,22 @@
 
+- Board.legalMove numTrayPieces - fix comment.
+
+  Board.lineMoveInfo returns hasInterMOveAnchor and other info. 
+  Then isCompletable decides if legal. If no inline anchor,
+  then you need a cross anchor. At least one move that touches
+  an existing tile crosswise. If you have that then you need to 
+  have enough tiles for intermove slots. 
+
+  For one point along the line that touches a neighbor you should 
+  either have an existing move, or add a move there and then 
+  have enough times to complete the play.
+  
+  Need move.anchoredCrosswise
+
+  But this is getting very complicated. Maybe easiest to require that 
+  all moves be adjacent to an existing tile. Simpler to code and simpler
+  for the user to understand.
+
 - Add error boundary.
 
 - Using fragments <> </> instead of divs??
