--- a/scala-server/todo.txt
+++ b/scala-server/todo.txt
@@ -1,57 +1,14 @@
 
-- Add 2 blank tiles.
+- Write test for final score.
 
-- Allow blank to be declared to be a letter. Double click to get a modal dialog
-  for entering the value.
+- Use smaller amazon machine. m3.large worked well.
 
-  https://daveceddia.com/open-modal-in-react/
-  https://www.npmjs.com/package/react-modal-dialog
-
-  Pass a callback function to the dialog to get back the input.
-
-- PlayedPiece needs another field - blankValue - Option[Char]. 
-
-- Blanks have 0 worth.
-
-- Make clear where the new word is placed by machine.
-
-- Use smaller amazon machine.
-
-  Try t2.medium first. 2 CPU and 4G no SSD. 5c/hour
-  Then c3.large - 2 CPU 3.75G SSD. 0.12
-  Then m3.large 2 CPU and 7.5 G SSD. 15c/hour
-  Might as well do m3.large. That worked perfectly.
-
-  t2 instances are VPC only. Why is that? VPC is another level of complication.
-  Let's not do that for now.
-
-- Indicate that it is user's turn to drag.
-
-- Remove non-word double letters from teh dictionary. WS, YE.
-
-- Target container is not a DOM element error in browser console.
-
-  Both main and index include the script. Only one should I think.
-
-  I ran into this same error, and as others have suggested, it's because your
-  bundle.js file is loading too early. Move your <script> tag into the body (as
-  the last line before the closing </body> tag) to resolve this error. –
-
-- Create new docker image with latest - uncommenting the deployment.
-
-- Comment the deployment again.
-
-- Indicate that first move has to be to the center.
-
-- Help for the app.
+- Remove non-word double letters from the dictionary. WS, YE.
 
 - Create cleanup scripts for docker container and image.
 
 - App logs in docker should go to the data area so you can see them easily from the
   outside.
-
-- Catch and log UI errors at highest level - and send to server if possible -
-  indicate error id in UI asking user to report.
 
 - Word frequencies:
 
@@ -70,7 +27,8 @@
 
 - Truncate nohup.out on production machine.
 
-- The port number specification is not dry. Make it so if possible.
+- The port number for docker hs to be specified redundantly in a couple of
+  docker scripts. Make it dry if possible.
 
 - controller test is flaky because it has a timeout of 1 sec. Change to 3.
 
@@ -83,11 +41,7 @@
   The command '/bin/sh -c add-apt-repository ppa:openjdk-r/ppa   && apt-get update   && apt-get install -y openjdk-8-jdk && java -version'
   returned a non-zero code: 100
 
-- Move current docker directory to haskell-server.
-
 - Update root level README file.
-
-- Upgrade Haskell server.
 
 - Change docker names to reflect type of server -
   
