UI code cleanup

--- a/web-ui/todo.txt
+++ b/web-ui/todo.txt
@@ -1,4 +1,6 @@
 
+- How come the user always starts?
+
 - Remove dead code after changes are tested.
 
 - Target container is not a DOM element error in browser console.
